@@ -1,4 +1,8 @@
-﻿shmuel 05.06.2014 00:51:14 +0200 - build 363
+﻿zg 05.06.2014 18:06:43 +0200 - build 364
+
+1. Macro Browser: более корректный переход к телу макроса на moonscript по f4/altf4.
+
+shmuel 05.06.2014 00:51:14 +0200 - build 363
 
 1. Оптимизация обработки ключей при загрузке макросов.
 
